[project]
name = "rvc-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime==4.8 ; sys_platform == 'darwin'",
    "beartype==0.18.5",
    "beautifulsoup4>=4.13.3",
    "certifi>=2023.7.22 ; sys_platform == 'darwin'",
    "diffq>=0.2",
    "edge-tts==6.1.9",
    "einops>=0.8.1",
    "faiss-cpu==1.7.3",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.0",
    "gradio==4.43.0",
    "julius>=0.2",
    "libf0>=1.0.2",
    "librosa==0.9.2",
    "matplotlib==3.7.2",
    "ml-collections>=1.0.0",
    "noisereduce>=3.0.3",
    "numba==0.57.0 ; sys_platform == 'darwin' or sys_platform == 'win32'",
    "numba>=0.57.0 ; sys_platform == 'linux'",
    "numpy==1.23.5",
    "omegaconf>=2.0.6 ; sys_platform == 'darwin'",
    "onnx>=1.14",
    "onnx2torch>=1.5",
    "onnxruntime>=1.17 ; sys_platform != 'darwin'",
    "onnxruntime-gpu>=1.17 ; sys_platform != 'darwin'",
    "pedalboard>=0.9.16",
    "pip>=23.3 ; sys_platform == 'darwin'",
    "pydub>=0.25",
    "pypresence>=4.3.0",
    "pyyaml>=6.0.2 ; sys_platform == 'darwin'",
    "requests>=2.31.0,<2.32.0",
    "resampy>=0.4",
    "rotary-embedding-torch==0.6.1",
    "samplerate==0.1.0",
    "scipy==1.11.1",
    "six>=1.16",
    "soundfile==0.12.1",
    "stftpitchshift>=2.0",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.2.2",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "torchcrepe==0.0.23",
    "torchfcpe>=0.0.4",
    "torchvision==0.18.1",
    "tqdm>=4.67.1",
    "transformers==4.44.2",
    "wget>=3.2",
    "wheel>=0.45.1 ; sys_platform == 'darwin'",
]
